first-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-service
spec:
  selector:
    app: first-app
  ports:
    - port: 80
      targetPort: 80
