ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apps-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    name: apps-ingress
spec:
  rules:
  - host: myhost.com
    http:
      paths:
      - pathType: Prefix
        path: "/anything"
        backend:
          service:
            name: first-service
            port: 
              number: 80
      - pathType: Prefix
        path: "/uuid"
        backend:
          service:
            name: second-app
            port:
              number: 80
